<resources>
    <string name="facebook_app_id">3217007335012533</string>
    <string name="fb_login_protocol_scheme">fb3217007335012533</string>
    <string name="app_name">Lost &amp; Found</string>
    <string name="lost_found_apps"><![CDATA[LOST & FOUND APPS]]></string>
    <string name="welcome_to">Welcome To</string>
    <string name="user_name">MD. Delwar Hossain Mian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
    <string name="location_request">Keep your location on</string>
    <string name="id_request">Select one of the options below for registration.</string>
    <string name="camera_request">Take your picture by tapping the camera below.</string>
    <string name="address_verification_request">Will you use the National ID card as your current address?</string>
    <string name="foreigner">Foreigner</string>
    <string name="citizen">Bangladeshi</string>
    <string name="log_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="password_forget">Password Forget</string>
    <string name="remember_password">Keep in signed in</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="user_id">ID</string>
    <string name="login">Login</string>
    <string name="or_new_user">Or New User?</string>
    <string name="nidnum">National ID Number</string>
    <string name="nid">National ID</string>
    <string name="bin">Birth Registration </string>
    <string name="binnum">Birth Registration Number</string>
    <string name="passport">Passport </string>
    <string name="passnum">Passport Number</string>
    <string name="expirydate">Expire Date</string>
    <string name="police_admin">Police Admin Pannel</string>
    <string name="head_front_pic">Front of the head</string>
    <string name="head_back_pic">Back of the head</string>
    <string name="face_pic">Face picture</string>
    <string name="front_throat">Front of the throat</string>
    <string name="behind_neck">Behind the neck</string>
    <string name="chest_pic">Chest picture</string>
    <string name="back_pic">Picture of the back</string>
    <string name="ear_pic">Ear picture</string>
    <string-array name="lost_and_found_search_type">
        <item>Item one</item>
        <item>Item two</item>
        <item>Item three</item>
        <item>Item four</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phnno">Mobile Number</string>
    <string name="otp_confirmation"> One Time Password Confirmation</string>
    <string name="otp_confirmation_text">Enter the One Time Password code</string>
    <string name="otp_warning">A 4-digit One Time Password code has been sent to your mobile.</string>
    <string name="help">Help</string>
    <string name="gps_network_not_enabled">Your Location is not enabled. Please Press YES for Location Update</string>
    <string name="open_location_settings">open_location_settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Cancel_item">Cancel</string>
    <string name="allegation">Allegation</string>
    <string name="registration_information">Registration Information</string>
    <string name="visa_type">Type Of Visa</string>
    <string name="country_name">Country Name</string>
    <string name="admin_panal">Police Admin Panel</string>
    <string-array name="array_status_type">
        <item>@string/investigation</item>
        <item>@string/disposal</item>
        <item>@string/Cancel</item>
    </string-array>
    <string name="investigation">Investigation</string>
    <string name="disposal">Disposal</string>
    <string name="logout">Logout</string>
    <string name="email_op">Email (Optional)</string>
    <string name="email">Email</string>
    <string name="field_null_error">This field can not be empty</string>
    <string name="please_choose_one_of_below">Please Choose One of below</string>
    <string-array name="purpose_of_visit">
        <item>Type of Visa</item>
        <item>Tourist visa</item>
        <item>Business visa</item>
        <item>Student visa</item>
        <item>Employment visa</item>
        <item> Diplomatic/Official visa</item>
        <item>Investor visa</item>
        <item>Journalist visa</item>
        <item> NGO visa</item>
    </string-array>
    <string name="please_fill_up_your_imigartion_address">Fill in the address during your stay in Bangladesh</string>
    <string name="support">Support</string>
    <string name="forget_password">Forget Password?</string>
    <string name="live_chat">Live Chat</string>
    <string name="live_call">Live Call</string>
    <string name="welcome_to_lost_and_found_application">"Welcome to Lost &amp; Found Application                                 Welcome to Lost &amp; Found Application"</string>
    <string name="information_entry">Information Entry</string>
    <string name="theft">Theft</string>
    <string name="to_lose">To lose</string>
    <string name="found">Found</string>
    <string name="information_search">Information Search</string>
    <string name="man">Man</string>
    <string name="vehicle">Vehicle</string>
    <string name="report_status">Report Status</string>
    <string name="others">Others</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="report">Report</string>
    <string-array name="doc_type">
        <item>@string/select_list</item>
        <item>NID</item>
        <item>Birth Certificate </item>
        <item>Passport </item>
    </string-array>
    <string name="doc_type_if_found">Document Type (If Found)</string>
    <string name="entry_code">Data compilation completed</string>
    <string name="entry_code1">Save the lost and found code</string>
    <string name="entry_code2">Thanks a lot from Bangladesh Police for the assistance with information</string>
    <string name="entry_code3">Contact us at (01***) for any information regarding the app</string>
    <string name="district">District</string>
    <string name="thana">Thana</string>
    <string name="village">Village</string>
    <string name="name">Name</string>
    <string name="name_if_found">Name (If found)</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="if_found">(If found)</string>
    <string name="husband_wife_name">Husband/Wife Name</string>
    <string name="husband_wife_name_if_found">Husband/Wife Name (If found)</string>
    <string-array name="religion">
        <item>@string/select_option</item>
        <item>Muslim</item>
        <item>Hindu</item>
        <item>Cristian</item>
        <item>Buddhist</item>
        <item>Others</item>

    </string-array>
    <string-array name="gender">
        <item>@string/select_option</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="occupation">Occupation</string>
    <string name="blood_group">Blood Group</string>
    <string name="vehicleType">Vehicle Type</string>
    <string name="vehicleBrand">Brand</string>
    <string name="vehicleModel">Model</string>
    <string name="vehicleRegiPart1">Matro Area</string>
    <string name="vehicleRegiPart2">Level</string>
    <string name="vehicleRegiNo">Regi No</string>
    <string name="engineNo">Engine No</string>
    <string name="chesisNo">Chesis No</string>
    <string name="ccNo">CC</string>
    <string name="madeIn">Made In</string>
    <string name="madeDate">Manufecture Date</string>
    <string name="identityInfo">Identity Information</string>
    <string name="colorName">Color</string>
    <string name="vehicleSign">Identity Sign</string>
    <string name="photo">Photo</string>
    <string name="documentType">Document Type</string>
    <string name="theftplaceAndTimeInfo">Theft Place And Times Information</string>
    <string name="lostplaceAndTimeInfo">Lost Place And Times Information</string>
    <string name="lostplaceAndTimeInfo1">Lost Place And Times Information</string>
    <string name="division">Division</string>
    <string name="addressDetails">Address Details</string>
    <string name="time">Time</string>
    <string name="for_own">For Own</string>
    <string name="for_others">For others</string>
    <string name="fill_the_information_of_the_person">Fill the information of the person</string>
    <string name="number">Number</string>
    <string name="doc_number">Document Number</string>
    <string name="doc_number_if_found">Document Number (If Found)</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="attachment">Attachment</string>
    <string name="blue_book">Blue Book</string>
    <string name="tax_token">Tax Token</string>
    <string name="fitness_certificate">Fitness Certificate</string>
    <string name="image">Image</string>
    <string name="applicant">Applicant</string>
    <string name="notification">Notification</string>
    <string name="insurance_paper">Insurance Paper</string>
    <string name="person_information">Person Information</string>
    <string name="dead_person_information">Dead Person Information</string>
    <string name="person_address">Person Address</string>
    <string name="age">Age</string>
    <string name="approximate_age">Approximate Age</string>
    <string name="laptop">Laptop</string>
    <string name="desktop">Desktop</string>
    <string name="hybrid">Hybrid</string>
    <string name="omni">Omni</string>
    <string name="note_book">Note Book</string>
    <string name="accessories">Computer Accessories</string>
    <string name="vehicle_entry">Vehicle</string>
    <string name="image_type">Image Type</string>
    <string name="image_name">Image Name</string>
    <string name="select_list">Select List</string>
    <string name="number_type">Number Type</string>
    <string name="country">Country</string>
    <string name="one_line_address">One Line Address</string>
    <string name="habit">Habit</string>
    <string name="speech">Speech</string>
    <string-array name="address_type">
        <item> @string/select_list </item>
        <item> Obtained from other sources </item>
        <item> Possible addresses </item>
        <item> Current </item>
        <item> Permanent </item>
        <item> Workplace Address </item>
        <item> Other </item>
    </string-array>
    <string name="deadbody_condition">DeadBody Condition</string>
    <string name="date_of_death">Date of death</string>
    <string name="deadbody_location">The location of the corpse</string>
    <string name="physical_details">Physical Details</string>
    <string name="eye">Eye</string>
    <string name="nose">Nose</string>
    <string name="hair">Hair</string>
    <string name="forehead">Forehead</string>
    <string name="beard">Beard</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="physical_constitution">Physical constitution</string>
    <string name="shape_of_face">Shape of face</string>
    <string name="chin">Chin</string>
    <string name="skin_color">Skin color</string>
    <string name="mustache">Mustache</string>
    <string name="ears">Ears</string>
    <string name="neck">Neck</string>
    <string name="height">Height</string>
    <string name="feet">(Feet)</string>
    <string name="inches">(Inches)</string>
    <string name="description_of_teeth">Description of teeth</string>
    <string name="re_capture">Re-Capture</string>
    <string name="please_confirm_that_the_capture_is_clear">Please confirm that the picture is clear</string>
    <string name="submit">Submit</string>
</resources>