<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/please_confirm_that_the_capture_is_clear"
        android:textAppearance="@style/TextAppearance.CastIntroOverlay.Title"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnReCapture"
            style="@style/BtnNext"
            android:layout_width="120dp"
            android:layout_alignParentLeft="true"
            android:text="@string/re_capture" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/BtnNext"
            android:layout_width="120dp"
            android:layout_alignParentRight="true"
            android:text="@string/submit" />
    </RelativeLayout>
</LinearLayout>