<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout

    android:layout_margin="20dp"
    android:id="@+id/rr1"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCitizen"
        style="@style/HomeItemCard"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_columnWeight="1"
        android:layout_alignParentLeft="true"
        app:layout_rowWeight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_citizen"
                android:tint="@color/colorPrimary"/>

            <TextView
                style="@style/HomeTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/citizen"
                android:textAlignment="center"

                android:textColor="@android:color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvFore"
        style="@style/HomeItemCard"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_columnWeight="1"

        android:layout_alignParentRight="true"
        app:layout_rowWeight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_foreiner" />

            <TextView
                style="@style/HomeTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/foreigner"
                android:textAlignment="center"

                android:textColor="@android:color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

   <!-- <Button
        android:id="@+id/button1"
        style="@style/ButtonStyle"
        android:layout_width="250dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:text="@string/citizen"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        style="@style/ButtonStyle"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:text="@string/foreigner"
        android:textColor="@android:color/white" />-->
</RelativeLayout>
    <RelativeLayout

        android:background="@color/colorPrimaryDark"
        android:id="@+id/rr2"
        android:padding="10dip"
        android:layout_height="@dimen/actionBarSize"
        android:layout_width="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/textNext"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/ic_forward_arrow"
            android:textColor="@android:color/white"
            android:drawableTint="@android:color/white"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>